@@ -88,7 +88,6 @@ var:;@echo '|$(var)|'!,
 # POSIX: Preserve trailing space
 run_make_test(q!
 .POSIX:
-x = y
 var = he  \
 llo
 var:;@echo '|$(var)|'!,
@@ -97,7 +96,6 @@ var:;@echo '|$(var)|'!,
 # POSIX: One space per bs-nl
 run_make_test(q!
 .POSIX:
-x = y
 var = he\
 \
 \
